# nixinfo

./: .gitignore  Cargo.toml  LICENSE  NON-LICENSE.md  README.md
src/: cpu.rs  distro.rs  environment.rs  lib.rs  memory.rs  packages.rs  shared_functions.rs  terminal.rs  uptime.rs
