[package]
name = "nixinfo"
description = "A lib crate for gathering system info such as cpu, distro, environment, kernel, etc in Rust."
homepage = "https://github.com/Phate6660/nixinfo"
version = "0.2.4"
authors = ["Ash <valleyknight@protonmail.com>"]
edition = "2018"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
music = ["mpd"]

[dependencies]
glob = "0.3.0"
mpd = { version = "0.0.12", optional = true }